config/gcppubsub/env_patch.yaml
# This adds the various environment variables needed by the GCP PubSub Source controller. It also
# adds anything needed by those environment variables (e.g. the secret volume whose location is in
# a env variable).

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: controller-manager
spec:
  template:
    spec:
      containers:
        - name: manager
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
      volumes:
        - name: google-cloud-key
          secret:
            secretName: gcppubsub-source-key
