config/gcppubsub/istio_egress.yaml
# Needed by the GCP PubSub Source to communicate with GCP PubSub.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gcppubsub-bus-ext
spec:
  hosts:
  - "*.googleapis.com"
  - "accounts.google.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
